--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Meenu, SORRY ❤️</title>
+<title>Meenu, I'm Sorry ❤️</title>
 
 <style>
 body {
@@ -14,15 +14,24 @@ body {
   color: white;
 }
 
+/* container */
 .container {
   margin-top: 120px;
   position: relative;
+  z-index: 2;
 }
 
-h1 {
+/* animated text */
+#mainText {
   font-size: 42px;
+  min-height: 60px;
 }
 
+h2 {
+  margin-top: 10px;
+}
+
+/* buttons */
 button {
   padding: 15px 30px;
   font-size: 18px;
@@ -37,38 +46,103 @@ button {
   color: white;
 }
 
+#yes:hover {
+  transform: scale(1.1);
+}
+
 #no {
   background-color: #333;
   color: white;
   position: absolute;
 }
-</style>
 
+/* falling hearts */
+.heart {
+  position: absolute;
+  top: -10px;
+  color: red;
+  font-size: 20px;
+  animation: fall linear forwards;
+}
+
+@keyframes fall {
+  to {
+    transform: translateY(110vh);
+    opacity: 0;
+  }
+}
+
+</style>
 </head>
 
 <body>
 
 <div class="container">
-<h1>Meenu, will you be my Valentine? ❤️</h1>
-  <h2>Chitta nadukhau , narisau hai ... ❤️</h2>
+<h1 id="mainText"></h1>
+
+<h2>Chitta nadukhau, narisau hai... ❤️</h2>
 
 <button id="yes" onclick="yesClicked()">Yes ❤️</button>
 <button id="no" onmouseover="moveNo()">No 😢</button>
 </div>
 
+<!-- Sasto Mutu Music -->
+<iframe width="0" height="0"
+src="https://www.youtube.com/embed/5QfP9sP8d6k?autoplay=1&loop=1&playlist=5QfP9sP8d6k"
+frameborder="0"
+allow="autoplay">
+</iframe>
+
 <script>
-function yesClicked() {
-  document.body.innerHTML =
-  "<h1 style='margin-top:150px;'>I love you Meenu ❤️</h1>";
+
+/* letter-by-letter text */
+let text = "Meenu, will you be my Valentine? ❤️";
+let i = 0;
+
+function typeWriter() {
+  if (i < text.length) {
+    document.getElementById("mainText").innerHTML += text.charAt(i);
+    i++;
+    setTimeout(typeWriter, 80);
+  }
 }
 
+typeWriter();
+
+/* yes clicked */
+function yesClicked() {
+  document.body.innerHTML = `
+  <div style="margin-top:150px;">
+    <h1>I'm really sorry Meenu ❤️</h1>
+    <h2>— Utsav</h2>
+  </div>`;
+}
+
+/* move no button */
 function moveNo() {
   let button = document.getElementById("no");
-  let x = Math.random() * window.innerWidth;
-  let y = Math.random() * window.innerHeight;
+  let x = Math.random() * (window.innerWidth - 100);
+  let y = Math.random() * (window.innerHeight - 50);
   button.style.left = x + "px";
   button.style.top = y + "px";
 }
+
+/* falling hearts */
+function createHeart() {
+  let heart = document.createElement("div");
+  heart.innerHTML = "❤️";
+  heart.className = "heart";
+  heart.style.left = Math.random() * window.innerWidth + "px";
+  heart.style.animationDuration = (Math.random() * 3 + 3) + "s";
+  document.body.appendChild(heart);
+
+  setTimeout(() => {
+    heart.remove();
+  }, 6000);
+}
+
+setInterval(createHeart, 300);
+
 </script>
 
 </body>
