--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 body {
   margin: 0;
   overflow: hidden;
-  font-family: 'Great Vibes', cursive;
+  font-family: 'Great Vibes';
   background: linear-gradient(135deg, #ff758c, #ff7eb3);
   text-align: center;
   color: white;
@@ -44,7 +44,7 @@ button {
   border: none;
   border-radius: 12px;
   cursor: pointer;
-  font-family: 'Great Vibes', cursive;
+  font-family: 'Great Vibes';
 }
 
 #yes {
@@ -121,7 +121,7 @@ typeWriter();
 /* yes clicked */
 function yesClicked() {
   document.body.innerHTML = `
-  <div style="margin-top:150px; font-family: 'Great Vibes', cursive;">
+  <div style="margin-top:150px; font-family: 'Great Vibes';">
     <h1 style="font-size:60px;">I'm really sorry Meenu ❤️</h1>
     <h2 style="font-size:40px;">— Utsav</h2>
   </div>`;
