--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Meenu, I'm Sorry ❤️</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- Romantic Cursive Font -->
-<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+<title>Meenu, I'm Sorry ❤️</title>
 
 <style>
 body {
   margin: 0;
   overflow: hidden;
-  font-family: 'Great Vibes';
+  font-family: Arial, sans-serif; /* Simple font */
   background: linear-gradient(135deg, #ff758c, #ff7eb3);
   text-align: center;
   color: white;
@@ -19,9 +18,10 @@ body {
 
 /* container */
 .container {
-  margin-top: 120px;
+  margin-top: 100px;
   position: relative;
   z-index: 2;
+  padding: 20px;
 }
 
 /* animated text */
@@ -33,7 +33,7 @@ body {
 
 h2 {
   margin-top: 10px;
-  font-size: 32px;
+  font-size: 30px;
 }
 
 /* buttons */
@@ -44,7 +44,7 @@ button {
   border: none;
   border-radius: 12px;
   cursor: pointer;
-  font-family: 'Great Vibes';
+  font-family: Arial, sans-serif;
 }
 
 #yes {
@@ -78,6 +78,26 @@ button {
     opacity: 0;
   }
 }
+
+/* ✅ Mobile Responsive */
+@media (max-width: 768px) {
+  #mainText {
+    font-size: 34px;
+  }
+
+  h2 {
+    font-size: 22px;
+  }
+
+  button {
+    font-size: 18px;
+    padding: 12px 20px;
+  }
+
+  .container {
+    margin-top: 80px;
+  }
+}
 </style>
 </head>
 
@@ -92,16 +112,25 @@ button {
 <button id="no" onmouseover="moveNo()">No 😢</button>
 </div>
 
-<!-- Simple Romantic Background Music -->
-<audio id="bgMusic" autoplay loop>
+<!-- Background Music -->
+<audio id="bgMusic" loop>
   <source src="romantic.mp3" type="audio/mpeg">
 </audio>
 
 <script>
 
-/* If browser blocks autoplay, play on first click */
-window.addEventListener("click", function() {
-  document.getElementById("bgMusic").play();
+const music = document.getElementById("bgMusic");
+
+/* Try autoplay when page loads */
+window.addEventListener("load", function() {
+  music.play().catch(() => {
+    console.log("Autoplay blocked. Waiting for user interaction.");
+  });
+});
+
+/* Fallback for mobile: play on first touch */
+document.addEventListener("touchstart", function() {
+  music.play();
 }, { once: true });
 
 /* letter-by-letter text */
@@ -121,9 +150,9 @@ typeWriter();
 /* yes clicked */
 function yesClicked() {
   document.body.innerHTML = `
-  <div style="margin-top:150px; font-family: 'Great Vibes';">
-    <h1 style="font-size:60px;">I'm really sorry Meenu ❤️</h1>
-    <h2 style="font-size:40px;">— Utsav</h2>
+  <div style="margin-top:120px; font-family: Arial, sans-serif; text-align:center; color:white;">
+    <h1 style="font-size:50px;">I'm really sorry Meenu ❤️</h1>
+    <h2 style="font-size:30px;">— Utsav</h2>
   </div>`;
 }
 
@@ -156,4 +185,5 @@ setInterval(createHeart, 300);
 
 </body>
 </html>
+
 
